2004-12-23  Alexander Malysh <amalysh at kannel.org>
    * contrib/kannel-monitor/index.php: applied patch that should fix
      a bug when dead bearerbox causes monitor to freeze.
      Thanks to Agastiya S. Mohammad <egi at sinaptix.com>.
      [Msg-Id: <1103539890.3803.309.camel@localhost.localdomain>]

2004-12-15    <kmarjola@enpocket.com>

    * gw/bb_store.c: removed -Wall warnings
    * gw/smskannel.conf: resumed global-sender, otherwise make check
      does not work

2004-12-13    <kmarjola@enpocket.com>

    * gw/bb_store.c: use Dict to make things much more faster. Also
      introduce 'store-dump-freq' to set up how often the situation
      is stored to file
    * gw/bearerbox.*, gwlib/cfg.def, doc/userguide/userguide.xml: 
      relevant changes

    * test/fakesmsc.c: update usage to reflect changed command line
      argument (-p to -r)

    * gw/smskannel.conf: updated to include much more explanations
      and fixed above thing
	
2004-11-30    <kmarjola@enpocket.com>

    * gwlib/conn.c: Bug fix: try not to read negative number of bytes
    * gwlib/http.c: Bug fix: close connection with bad content-length

2004-11-29  Alexander Malysh <amalysh at kannel.org>
    * gwlib/charset.c: fixed bug in 'charset_convert' that could cause
      converted string to be truncated.
      Thanks to "Pommnitz Joerg" for the patch.
      [Msg-Id: 4D93AAF95CB5A64E8F622EC796ECF5AC3FC3DF@exil.condat.de]

2004-11-23  Stipe Tolj  <stolj@wapme.de> 
    * Making stable release 1.4.0.